# 01ai_01protocol_mcp

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
plugins/inprogress/chatgpt-gpt/: README.md  gpt-system-prompt.md  openapi.yaml
plugins/inprogress/chatgpt-gpt/api/: package-lock.json  package.json  tsconfig.json
plugins/inprogress/chatgpt-gpt/api/src/: index.ts
plugins/inprogress/vscode-extension/: .vscodeignore  LICENSE  package-lock.json  package.json
plugins/inprogress/vscode-extension/src/: agentProvider.ts  extension.ts  vault.ts
plugins/inprogress/vscode-extension/src/commands/: addMemory.ts  createAgent.ts  signOutput.ts  verifyAgent.ts  viewAgent.ts
python-sdk/: README.md  pyproject.toml
python-sdk/protocol_01/: __init__.py  agent.py  cli.py  consent.py  crypto.py  delegation.py  guard.py  memory.py  verify.py
