[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protocol-01"
version = "0.1.0"
description = "Official Python SDK for the 01 Protocol — portable, cryptographically verifiable AI agent identity"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "01AI.ai", email = "info@01ai.ai" }]
keywords = ["ai-agent", "identity", "01-protocol", "ed25519", "cryptography", "portable", "open-standard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://01ai.ai"
Repository = "https://github.com/01ai-Admin/01-protocol"
Documentation = "https://01ai.ai/developers"

[project.scripts]
create-agent = "protocol_01.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["protocol_01"]
